--- a/epam-gmail-task/epam-gmail-task.csproj
+++ b/epam-gmail-task/epam-gmail-task.csproj
@@ -1,4 +1,4 @@
-﻿<Project Sdk="Microsoft.NET.Sdk">
+<Project Sdk="Microsoft.NET.Sdk">
 
   <PropertyGroup>
     <TargetFramework>net6.0</TargetFramework>
@@ -18,10 +18,6 @@
 	  <PackageReference Include="Selenium.WebDriver" Version="4.1.0" />
 	  <PackageReference Include="Selenium.WebDriver.ChromeDriver" Version="97.0.4692.7100" />
 	  <PackageReference Include="System.Configuration.ConfigurationManager" Version="6.0.0" />
-  </ItemGroup>
-
-  <ItemGroup>
-    <Folder Include="Tests\" />
   </ItemGroup>
 
 </Project>
