--- a/epam-gmail-task/App.config
+++ b/epam-gmail-task/App.config
@@ -2,5 +2,7 @@
 <configuration>
 	<appSettings>
 		<add key="Browser" value="Chrome"/>
+		<add key="ElementTimeout" value="10"/>
+		<add key="StartUrl" value="https://www.google.com/intl/ru/gmail/about/"/>
 	</appSettings>
 </configuration>
