--- a/epam-gmail-task/epam-gmail-task.csproj
+++ b/epam-gmail-task/epam-gmail-task.csproj
@@ -17,6 +17,7 @@
 	  <PackageReference Include="Selenium.Support" Version="4.1.0" />
 	  <PackageReference Include="Selenium.WebDriver" Version="4.1.0" />
 	  <PackageReference Include="Selenium.WebDriver.ChromeDriver" Version="97.0.4692.7100" />
+	  <PackageReference Include="Selenium.WebDriver.GeckoDriver" Version="0.30.0.1" />
 	  <PackageReference Include="System.Configuration.ConfigurationManager" Version="6.0.0" />
   </ItemGroup>
 
