Add users section in config.

--- a/epam-gmail-task/App.config
+++ b/epam-gmail-task/App.config
@@ -1,8 +1,17 @@
 ﻿<?xml version="1.0" encoding="utf-8" ?>
 <configuration>
+	<configSections>
+		<section name="users" type="System.Configuration.NameValueSectionHandler" />
+	</configSections>
+	
+	<users>
+		<add key="Login" value="gt016618" />
+		<add key="password" value="mAPM6SWd" />
+	</users>
+	
 	<appSettings>
 		<add key="Browser" value="Chrome"/>
-		<add key="ElementTimeout" value="10"/>
+		<add key="ElementTimeout" value="30"/>
 		<add key="StartUrl" value="https://www.google.com/intl/ru/gmail/about/"/>
 	</appSettings>
 </configuration>
