Add RemoteDriverUri section.

--- a/epam-gmail-task/App.config
+++ b/epam-gmail-task/App.config
@@ -2,6 +2,7 @@
 <configuration>
 	<configSections>
 		<section name="users" type="System.Configuration.NameValueSectionHandler" />
+		<section name="RemoteDriverUri" type="System.Configuration.NameValueSectionHandler" />
 	</configSections>
 	
 	<users>
@@ -14,4 +15,8 @@
 		<add key="ElementTimeout" value="30"/>
 		<add key="StartUrl" value="https://www.google.com/intl/ru/gmail/about/"/>
 	</appSettings>
+
+	<RemoteDriverUri>
+		<add key="GridUri" value="http://localhost:4444/wd/hub" />
+	</RemoteDriverUri>
 </configuration>
