--- a/epam-gmail-task/epam-gmail-task.csproj
+++ b/epam-gmail-task/epam-gmail-task.csproj
@@ -1,7 +1,7 @@
-<Project Sdk="Microsoft.NET.Sdk">
+﻿<Project Sdk="Microsoft.NET.Sdk">
 
   <PropertyGroup>
-    <TargetFramework>net6.0</TargetFramework>
+    <TargetFramework>net48</TargetFramework>
     <RootNamespace>epam_gmail_task</RootNamespace>
     <Nullable>enable</Nullable>
 
