Add mail message entity.

--- a/epam-gmail-task/epam-gmail-task.csproj
+++ b/epam-gmail-task/epam-gmail-task.csproj
@@ -23,10 +23,9 @@
   </ItemGroup>
 
   <ItemGroup>
-    <Folder Include="Resourses\" />
-  </ItemGroup>
-
-  <ItemGroup>
+    <None Update="Resourses\MailMessageData.csv">
+      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
+    </None>
     <None Update="Resourses\UserData.csv">
       <CopyToOutputDirectory>Always</CopyToOutputDirectory>
     </None>
