Revert SignIn Data-Driven. If you do login based on data, then login-dependent tests become overcomplicated.

--- a/epam-gmail-task/App.config
+++ b/epam-gmail-task/App.config
@@ -1,6 +1,7 @@
 ﻿<?xml version="1.0" encoding="utf-8" ?>
 <configuration>
 	<configSections>
+		<section name="users" type="System.Configuration.NameValueSectionHandler" />
 		<section name="RemoteDriverUri" type="System.Configuration.NameValueSectionHandler" />
 	</configSections>
 	
@@ -13,4 +14,9 @@
 	<RemoteDriverUri>
 		<add key="GridUri" value="http://localhost:4444/wd/hub" />
 	</RemoteDriverUri>
+
+	<users>
+		<add key="login" value="gt016618" />
+		<add key="password" value="mAPM6SWd" />
+	</users>
 </configuration>
